--- a/Api/Api.csproj
+++ b/Api/Api.csproj
@@ -14,6 +14,7 @@
 
     <ItemGroup>
       <PackageReference Include="Carter" Version="8.1.0" />
+      <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
     </ItemGroup>
 
 </Project>
