--- a/Api/Api.csproj
+++ b/Api/Api.csproj
@@ -14,6 +14,8 @@
 
     <ItemGroup>
       <PackageReference Include="Carter" Version="8.1.0" />
+      <PackageReference Include="Serilog.AspNetCore" Version="8.0.1" />
+      <PackageReference Include="Serilog.Formatting.Compact" Version="2.0.0" />
       <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
     </ItemGroup>
 
