updated the login feature :zap:

--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -10,6 +10,12 @@
     "ConnectionString": "",
     "DatabaseName": ""
   },
+  "JwtOptions": {
+    "Issuer": "",
+    "Audience": "",
+    "Key": "",
+    "ExpiryMinutes": 0
+  },
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
     "MinimumLevel": {
